# KlatreBot_Public

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  ChadLogger.py  ChromaVectorService.py  KlatreBot.py  KlatreGPT.py  KlatringAttendance.py  MCPToolManager.py  MessageDatabase.py  ProomptTaskQueue.py  RAGEmbeddingService.py  RAGQueryService.py  RAG_ENHANCED_FEATURES.md  README.md  SERVICE_SETUP.md  SOUL.MD  check_chromadb_metric.py  check_migration_status.py  check_users.py  cleanup_command_messages.py  compare_distance_metrics.py  debug_similarity.py  generate_embeddings.py  install-service.sh  install.sh  klatrebot-memory.service  klatrebot-memory.timer  klatrebot.service  klatrebot_prompt.txt  mention_vs_display_name_example.py  migrate_database_schema.py  migrate_discord_history.py  migrate_to_chromadb.py  migrate_to_sqlite_vec.py  pelleService.py  pelle_greece_example.py  pyproject.toml  (+15 more)
backup/: README.md  backup.sh  register_cron.sh
chroma_db/: chroma.sqlite3
infra/: README.md  view-hermes-trace.sh
klatrebot_v1/: ChromaVectorService.py  KlatreBot.py  KlatreGPT.py  MCPToolManager.py  MessageDatabase.py  ProomptTaskQueue.py  RAGEmbeddingService.py  RAGQueryService.py  SERVICE_SETUP.md  klatrebot.env  klatrebot.service  klatrebot_prompt.txt  migrate_discord_history.py  pelleService.py
klatrebot_v2/: .gitignore  SERVICE_SETUP.md  __init__.py  __main__.py  bot.py  klatrebot-v2.service  logging_config.py  pelle.py  settings.py  tasks.py  time_utils.py
scripts/: backfill_embeddings.py  migrate_old_db.py  normalize_timestamps.py  semantic_smoke.py
(+102 files in other folders)
